--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
 		<ul class="nav navbar-nav">
 			<!-- <li><a href="/nerds">Nerds</a></li>
 			<li><a href="/geeks">Geeks</a></li> -->
-			<li><a href="/excel">Excel Upload</a></li>
+			<li><a href="/zpx">ZPX</a></li>
 		</ul>
 	</nav>
 
